memberList 띄우기(memberAddress 컬럼이 unknown column이라고나옴...)

--- a/aws0822Boot/src/main/resources/static/index.html
+++ b/aws0822Boot/src/main/resources/static/index.html
@@ -8,5 +8,11 @@
 		Hello World !
 		<br>
 		static 폴더에 들어있는 기본폴더 index.html
+		<br>
+		<a href="/test">타임리프 테스트화면</a>
+		<br>
+		<a href="/member/memberSignin.aws">회원가입</a>
+		<br>
+		<a href="/member/memberList.aws">회원목록</a>
 	</BODY>
 </HTML>
